Made it so that the data from the json files can be accessed and displayed all the contents of all the data of the json files

--- a/index.html
+++ b/index.html
@@ -1,7 +1,22 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
-    <body>
-        <h1>Group Members: Mandeep Bal and Sadman Shahryier</h1>
-    </body>
+  <head>
+    <script src="artists.json"></script>
+    <script src="genres.json"></script>
+    <script src="sample-songs.json"></script>
+    <script src="assign2.js"></script>
+  </head>
+  <body>
+    <h1>Group Members: Mandeep Bal and Sadman Shahryier</h1>
+
+    <h2>Artists:</h2>
+    <select id="artistSelect"></select>
+
+    <h2>Genres:</h2>
+    <select id="genreSelect"></select>
+
+    <script>
+      temp();
+    </script>
+  </body>
 </html>
