Mandeep worked on the querry selectors for each of the three json data files that were given. Both Sadman and Mandeep worked together on the sort method

--- a/index.html
+++ b/index.html
@@ -15,8 +15,20 @@
     <h2>Genres:</h2>
     <select id="genreSelect"></select>
 
-    <script>
-      temp();
-    </script>
+    <!-- <h2>Simple Songs:</h2>
+    <select id="sampleSongSelect"></select> -->
+
+    <div id = "sampleSongSelect">
+      
+    </div>
+
+    <h2>Button Testing:</h2>
+    <button id="sortTitle">Sort Title</button>
+    <button id="sortArtist">Sort Artist</button>
+    <button id="sortYear">Sort Year</button>
+    <button id="sortGenre">Sort Genre</button>
+    <button id="sortPopularity">Sort Popularity</button>
+
+
   </body>
 </html>
