single song commit

--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
       </div>
       <div id="singleSongViewContainer">
         <div id="songInfo">
+          <!--single song view div for playlist-->
           <h2>Song Information</h2>
           <p id="title1"></p>
           <p id="artist1"></p>
